--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,23 +12,25 @@
         android:layout_width="135dp"
         android:layout_height="122dp"
         android:layout_gravity="center"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="80dp"
         android:contentDescription="@string/btn_iniciarSesion"
         app:srcCompat="@drawable/google" />
 
     <TextView
         android:id="@+id/txt_"
         android:layout_width="match_parent"
-        android:layout_height="224dp"
+        android:layout_height="120dp"
         android:gravity="center"
         android:text="@string/txt_mensaje"
         android:textSize="24sp"/>
 
-    <Button
-        android:id="@+id/btn_login"
-        android:layout_width="match_parent"
+    <!--GoogleSignInBtn: Sign in with Google account-->
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/googleLoginBtn"
         android:layout_height="wrap_content"
-        android:onClick="iniciarSesion"
-        android:text="@string/btn_iniciarSesion" />
+        android:layout_width="wrap_content"
+        android:layout_gravity="center"
+        android:onClick="iniciarSesion">
+    </com.google.android.gms.common.SignInButton>
 
 </LinearLayout>
