Se agrega complementos para SplashScreen. Falta el logo de la app al iniciar.

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,10 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <!-- Estamos agregando el background como estilo para el Splash. -->
+    <style name="SplashActivity" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowBackground">@drawable/theme_background</item>
+    </style>
+
+
 </resources>
