--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity">
+    tools:context=".LoginActivity"
+    android:background="@drawable/fondo_inicio_sesion">
 
     <EditText
         android:id="@+id/editText"
@@ -68,6 +69,7 @@
         android:fontFamily="sans-serif-black"
         android:text="@string/txtApp"
         android:textColor="@color/md_indigo_300"
+        android:textStyle="italic"
         android:textSize="40sp"
         app:layout_constraintBottom_toTopOf="@+id/editText"
         app:layout_constraintEnd_toEndOf="parent"
