--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -41,7 +41,7 @@
         app:layout_constraintVertical_bias="0.07" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnLoginActivity"
         android:layout_width="125dp"
         android:layout_height="52dp"
         android:layout_marginStart="32dp"
