--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,16 +30,15 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
         android:layout_marginLeft="4dp"
+        android:layout_marginBottom="16dp"
         android:fontFamily="sans-serif-black"
+        android:onClick="onClick"
         android:text="@string/txt_registro"
         android:textColor="@color/md_red_600"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/txtFrase"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.977"
-        android:onClick="onClick"/>
+        app:layout_constraintStart_toEndOf="@+id/txtFrase" />
 
     <TextView
         android:id="@+id/txtBienvenida"
