--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,8 +10,8 @@
     <EditText
         android:id="@+id/editTextEmail"
         android:layout_width="310dp"
-        android:layout_height="50sp"
-        android:layout_marginTop="264dp"
+        android:layout_height="40sp"
+        android:layout_marginTop="232dp"
         android:background="@drawable/input_field"
         android:ems="10"
         android:hint="@string/txtEmail"
@@ -23,22 +23,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/editTextPass"
-        android:layout_width="310dp"
-        android:layout_height="50sp"
-        android:background="@drawable/input_field"
-        android:ems="10"
-        android:hint="@string/txtPassword"
-        android:importantForAutofill="no"
-        android:inputType="textPassword"
-        android:textColorHint="@color/md_black_1000_50"
-        app:layout_constraintBottom_toBottomOf="parent"
+
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/btnGoogleSignIn"
+        android:layout_width="125dp"
+        android:layout_height="52sp"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
-        app:layout_constraintVertical_bias="0.07" />
+        app:layout_constraintTop_toBottomOf="@+id/btnLoginActivity" />
 
     <Button
         android:id="@+id/btnLoginActivity"
@@ -46,25 +39,39 @@
         android:layout_height="52dp"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="40dp"
         android:background="@drawable/button"
         android:fontFamily="sans-serif-medium"
         android:text="@string/txtLogin"
         android:textColor="@color/md_white_1000"
         android:textSize="15sp"
         android:textStyle="normal"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.07"
+        app:layout_constraintHorizontal_bias="0.437"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextPass"
-        app:layout_constraintVertical_bias="0.058" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextPass" />
+
+    <EditText
+        android:id="@+id/editTextPass"
+        android:layout_width="310dp"
+        android:layout_height="40sp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/input_field"
+        android:ems="10"
+        android:hint="@string/txtPassword"
+        android:importantForAutofill="no"
+        android:inputType="textPassword"
+        android:textColorHint="@color/md_black_1000_50"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="112dp"
+        android:layout_marginTop="100dp"
         android:layout_marginBottom="16dp"
         android:fontFamily="sans-serif-black"
         android:text="@string/txtApp"
@@ -76,7 +83,7 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.06" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
         android:id="@+id/imgRetornar"
@@ -95,14 +102,16 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/txtAppObj"
-        android:textStyle="italic"
         android:fontFamily="sans-serif-medium"
+        android:text="@string/txtAppObj"
         android:textColor="@color/md_indigo_300"
+        android:textStyle="italic"
         app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.362" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
