--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -1,69 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DashboardActivity"
-    tools:ignore="NamespaceTypo">
+    tools:context=".DashboardActivity">
 
-    <com.google.android.material.appbar.AppBarLayout
+
+    <FrameLayout
+        android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:layout_above="@id/bottom_navigation"/>
 
-    </com.google.android.material.appbar.AppBarLayout>
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        app:menu="@menu/menu_nav"
+        android:background="?android:attr/windowBackground"/>
 
-    <include layout="@layout/content_dashboard" />
-
-    <com.getbase.floatingactionbutton.FloatingActionsMenu
-
-        android:id="@+id/menu"
+    <!--
+    <Button
+        android:id="@+id/btnLogout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="end|bottom"
-        android:layout_margin="16dp"
-        app:fab_labelStyle="@style/Etiquetas"
-        app:fab_addButtonColorNormal="@color/colorPrimary"
-        app:fab_addButtonColorPressed="@color/colorPrimaryDark">
+        android:layout_marginTop="96dp"
+        android:gravity="center"
+        android:text="Cerrar Sesion"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.893"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+    -->
 
-        <com.getbase.floatingactionbutton.FloatingActionButton
-            android:id="@+id/map"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            fab:fab_colorNormal="?attr/colorAccent"
-            fab:fab_icon="@android:drawable/ic_menu_upload_you_tube"
-            fab:fab_size="mini"
-            fab:fab_title="Mapa" />
-
-        <com.getbase.floatingactionbutton.FloatingActionButton
-            android:id="@+id/home"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            fab:fab_colorNormal="?attr/colorAccent"
-            fab:fab_icon="@android:drawable/ic_menu_my_calendar"
-            fab:fab_size="mini"
-            fab:fab_title="Denuncia" />
-
-        <com.getbase.floatingactionbutton.FloatingActionButton
-            android:id="@+id/profile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            fab:fab_colorNormal="?attr/colorAccent"
-            fab:fab_icon="@android:drawable/ic_menu_mapmode"
-            fab:fab_size="mini"
-            fab:fab_title="Perfil" />
-
-        <com.getbase.floatingactionbutton.FloatingActionButton
-            android:id="@+id/settings"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            fab:fab_colorNormal="?attr/colorAccent"
-            fab:fab_icon="@android:drawable/ic_dialog_info"
-            fab:fab_size="mini"
-            fab:fab_title="Configuracion" />
-
-    </com.getbase.floatingactionbutton.FloatingActionsMenu>
-
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</RelativeLayout>
