--- a/app/src/main/res/layout/fragment_mapa.xml
+++ b/app/src/main/res/layout/fragment_mapa.xml
@@ -6,8 +6,8 @@
     tools:context=".MapaFragment">
 
     <com.google.android.gms.maps.MapView
-        android:id="@+id/mapaGuardias"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:id="@+id/map" />
 
 </FrameLayout>
