--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -26,55 +25,87 @@
         android:layout_width="match_parent"
         android:layout_height="448dp"
         android:layout_below="@+id/frgSeccionDelitos"
-        android:layout_marginTop="-2dp">
+        android:layout_marginTop="-2dp">         
+        
+        <LinearLayout
+            android:id="@+id/seccion1"
+            android:layout_width="match_parent"
+            android:layout_height="160dp"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="180dp"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <Button
+                    android:id="@+id/btnDenunciaRobo"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginLeft="20dp"
+                    android:text="@string/txtBtnRobo"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="200dp"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <Button
+                    android:id="@+id/btnDenunciaAgresion"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginLeft="8dp"
+                    android:text="@string/txtBtnAgresion"/>
+
+
+            </LinearLayout>
+            
+        </LinearLayout>
 
         <LinearLayout
-            android:layout_width="348dp"
-            android:layout_height="366dp"
-            android:layout_centerInParent="true"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:orientation="vertical">
+            android:id="@+id/seccion2"
+            android:layout_width="match_parent"
+            android:layout_height="160dp"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal"
+            android:layout_below="@+id/seccion1">
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="160dp"
-                android:layout_marginTop="10dp"
-                android:orientation="horizontal">
+                android:layout_width="180dp"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-                <ImageButton
+                <Button
+                    android:id="@+id/btnDenunciaDrogas"
                     android:layout_width="150dp"
-                    android:layout_height="match_parent"
-                    android:contentDescription="@string/txtBtnRobo" />
-
-                <ImageButton
-                    android:layout_width="150dp"
-                    android:layout_height="match_parent"
-                    android:contentDescription="@string/txtBtnAgresion" />
-
+                    android:layout_height="150dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginLeft="20dp"
+                    android:text="@string/txtBtnDrogas" />
 
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="160dp"
-                android:layout_marginTop="10dp"
-                android:orientation="horizontal">
+                android:layout_width="200dp"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-                <ImageButton
+                <Button
+                    android:id="@+id/btnDenunciaOtro"
                     android:layout_width="150dp"
-                    android:layout_height="match_parent"
-                    android:contentDescription="@string/txtBtnDrogas" />
-
-                <ImageButton
-                    android:layout_width="150dp"
-                    android:layout_height="match_parent"
-                    android:contentDescription="@string/txtBtnOtro" />
-
+                    android:layout_height="150dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginLeft="8dp"
+                    android:text="@string/txtBtnOtro" />
 
             </LinearLayout>
-
-
+            
+            
         </LinearLayout>
 
     </RelativeLayout>
