Se agregaron marcadores al mapa para los guardias

--- a/app/src/main/res/drawable/theme_background.xml
+++ b/app/src/main/res/drawable/theme_background.xml
@@ -3,10 +3,11 @@
     <!--- Fondo del Splash Screen -->
     <item
         android:drawable="@drawable/background"/>
+
     <item>
         <!--- Icono de la aplicaciones a mostrar -->
         <bitmap
             android:gravity="center"
-            android:src="@drawable/rsz_190628" />
+            android:src="@drawable/aplicacion" />
     </item>
 </layer-list>
