--- a/app/src/main/res/layout/activity_choose__user.xml
+++ b/app/src/main/res/layout/activity_choose__user.xml
@@ -14,6 +14,7 @@
         android:layout_marginTop="84dp"
         android:layout_marginEnd="56dp"
         android:layout_marginRight="56dp"
+        android:background="@drawable/circle_bttn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/user_c"
         app:srcCompat="@drawable/guardian_bttn" />
@@ -25,6 +26,7 @@
         android:layout_marginStart="56dp"
         android:layout_marginLeft="56dp"
         android:layout_marginTop="84dp"
+        android:background="@drawable/circle_bttn"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/user_c"
         app:srcCompat="@drawable/users_bttn" />
@@ -64,8 +66,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="56dp"
-        android:layout_marginRight="56dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginRight="60dp"
         android:text="Guardian"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -78,6 +80,7 @@
         android:layout_marginStart="152dp"
         android:layout_marginLeft="152dp"
         android:layout_marginTop="250dp"
+        android:background="@drawable/circle_bttn"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/user_c"
         app:srcCompat="@drawable/admin_bttn" />
