Guardias en el mapa

--- a/app/src/main/res/drawable/theme_background.xml
+++ b/app/src/main/res/drawable/theme_background.xml
@@ -3,11 +3,10 @@
     <!--- Fondo del Splash Screen -->
     <item
         android:drawable="@drawable/background"/>
-
     <item>
         <!--- Icono de la aplicaciones a mostrar -->
         <bitmap
             android:gravity="center"
-            android:src="@drawable/aplicacion" />
+            android:src="@drawable/splash_imagen" />
     </item>
 </layer-list>
