--- a/app/src/main/res/drawable/theme_background.xml
+++ b/app/src/main/res/drawable/theme_background.xml
@@ -7,6 +7,6 @@
         <!--- Icono de la aplicaciones a mostrar -->
         <bitmap
             android:gravity="center"
-            android:src="@drawable/rsz_190628" />
+            android:src="@drawable/logo_power" />
     </item>
 </layer-list>
